--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 0
+  port: 10000
 
 spring:
   application:
     name: collecting-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: localhost:3306/collecting
+    url: jdbc:mysql://localhost:3306/collecting
     username: root
     password: root
 #  rabbitmq:
